force-app/main/default/src/objects/HealthCloudGA__CrossObjectRelationship__c/HealthCloudGA__CrossObjectRelationship__c.object-meta.xml
<CustomObject>
    <label>Cross Object Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cross Object Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Object Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>