force-app/main/default/src/objects/HealthCloudGA__CrossObjectRelationship__c/fields/HealthCloudGA__FromObject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FromObject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From Object</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>