force-app/main/default/src/objects/HealthCloudGA__CrossObjectRelationship__c/fields/HealthCloudGA__ToObject__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ToObject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To Object</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>