force-app/main/default/src/objects/HealthCloudGA__CrossObjectRelationship__c/listViews/HealthCloudGA__All.listView-meta.xml
<ListView>
    <fullName>HealthCloudGA__All</fullName>
    <columns>NAME</columns>
    <columns>HealthCloudGA__FromObject__c</columns>
    <columns>HealthCloudGA__ToObject__c</columns>
    <columns>HealthCloudGA__Relationship__c</columns>
    <columns>HealthCloudGA__ReverseRelationship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>